ensure URLs wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,11 @@
  
 @import "bootstrap";
 
+a {
+overflow-wrap: break-word;
+  word-wrap: break-word;
+  }
+
 .mantelpiece {
 				background-color: #006E45;
 				color: #fff;
@@ -46,12 +51,6 @@
      		   padding: 2rem 0;
 		   	}
 
-/* 
- 		  	a {
-				text-underline-offset: 0.1em;
-				text-decoration-color: lightgray;
-			}
- */
 
 
 
